Adjust name in package.json file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Dinos for Sale",
+  "name": "dinos_for_sale",
   "version": "1.0.0",
   "description": "Personal html, css, and Bootstrap project for Nucamp",
   "main": "index.js",
